proto definitions: login request
